README.MD file added
readme.md file is added and body updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Harapalsinh Bhati</title>
 </head>
 <body>
-    Hi! I am Harapalsinh
+    <h1>Hi! I am Harapalsinh </h1>
+    <h3>This is my portfolio website to showcase my work</h3>
 </body>
 </html>
