--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hi! I am Harapalsinh </h1>
     <h3>This is my portfolio website to showcase my work</h3>
+    <p>All the projects are listed here.</p>
 </body>
 </html>
