code: languages added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Hi! I am Harapalsinh </h1>
     <h3>This is my portfolio website to showcase my work</h3>
-    <p>All the projects are listed here.</p>
+    <h2>Programming languages: </h2>
+    <ul>
+        <li>PHP</li>
+        <li>JavaScript</li>
+        <li>NodeJS</li>
+    </ul>
 </body>
 </html>
